# linear-algebra-cpp

./: .gitignore  CMakeLists.txt  MathEngine.cppm  README.md  config.json  imgui.ini  linear-algebra-cpp.sln
linear-algebra-cpp/: imgui.ini  linear-algebra-cpp.cpp  linear-algebra-cpp.vcxproj  linear-algebra-cpp.vcxproj.filters
linear-algebra-cpp/x64/Debug/: linear-algebra-cpp.exe.recipe  vc143.idb
linear-algebra-cpp/x64/Debug/linear-a.79d04cba.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  linear-algebra-cpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
linear-algebra-cpp/x64/Release/: linear-algebra-cpp.exe.recipe  linear-algebra-cpp.iobj  linear-algebra-cpp.ipdb
linear-algebra-cpp/x64/Release/linear-a.79d04cba.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  linear-algebra-cpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
